--- a/Server/package.json
+++ b/Server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "application-name",
+  "name": "Certifoto-Server",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -7,6 +7,9 @@
   },
   "dependencies": {
     "express": "3.9.0",
-    "jade": "*"
+    "jade": "*",
+    "mongoose": "*",
+    "body-parser": "*",
+    "moment": "*"
   }
 }
