--- a/TrueCam/bin/AndroidManifest.xml
+++ b/TrueCam/bin/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.INTERNET"/>
     
     <application
         android:allowBackup="true"
@@ -20,7 +21,7 @@
         android:label="@string/app_name"
          >
         <activity
-            android:name="com.example.truecam.TrueCamActivity"
+            android:name="com.example.certifoto.CertifotoActivity"
             android:label="@string/app_name" 
             android:theme="@android:style/Theme.NoTitleBar"
             android:screenOrientation="portrait">
