Add activity to show the taken picture and info returned from server

--- a/TrueCam/AndroidManifest.xml
+++ b/TrueCam/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.truecam"
+    package="com.example.certifoto"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -31,6 +31,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+         <activity
+            android:name="com.example.certifoto.ResultPicActivity"
+            android:theme="@android:style/Theme.NoTitleBar" 
+            android:launchMode="singleInstance"
+            android:noHistory="true"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
