--- a/TrueCam/bin/AndroidManifest.xml
+++ b/TrueCam/bin/AndroidManifest.xml
@@ -12,7 +12,6 @@
     <uses-feature android:name="android.hardware.camera" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION " />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.INTERNET"/>
     
@@ -35,6 +34,8 @@
          <activity
             android:name="com.example.certifoto.ResultPicActivity"
             android:theme="@android:style/Theme.NoTitleBar" 
+            android:launchMode="singleInstance"
+            android:noHistory="true"
             android:screenOrientation="portrait"/>
     </application>
 
