--- a/Server/package.json
+++ b/Server/package.json
@@ -10,6 +10,11 @@
     "jade": "*",
     "mongoose": "*",
     "body-parser": "*",
-    "moment": "*"
+    "moment": "*",
+    "request": "*",
+    "passport": "*",
+    "xml2js": "0.2.0",
+    "xml-crypto": "0.0.x",
+    "xmldom": "0.1.x"
   }
 }
