--- a/TrueCam/AndroidManifest.xml
+++ b/TrueCam/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="11"
+        android:minSdkVersion="16"
         android:targetSdkVersion="17" />
 
     <uses-permission android:name="android.permission.CAMERA" />
@@ -15,10 +15,18 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.INTERNET"/>
     
+	<uses-feature
+		android:name="android.hardware.camera.front"
+		android:required="false"/>
+	<uses-feature
+		android:name="android.hardware.camera.autofocus"
+		android:required="false"/>
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
          >
         <activity
             android:name="com.example.certifoto.CertifotoActivity"
