--- a/TrueCam/AndroidManifest.xml
+++ b/TrueCam/AndroidManifest.xml
@@ -9,12 +9,11 @@
         android:targetSdkVersion="17" />
 
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-feature android:name="android.hardware.camera" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.INTERNET"/>
-    
+   	<uses-permission android:name="android.permission.INTERNET" />
+    <uses-feature android:name="android.hardware.camera" />
 	<uses-feature
 		android:name="android.hardware.camera.front"
 		android:required="false"/>
@@ -28,16 +27,21 @@
         android:label="@string/app_name"
         android:largeHeap="true"
          >
+        
+        <activity
+            android:name="com.example.certifoto.LoginActivity"
+            android:theme="@android:style/Theme.NoTitleBar" >
+         	<intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name="com.example.certifoto.CertifotoActivity"
             android:label="@string/app_name" 
             android:theme="@android:style/Theme.NoTitleBar"
             android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+           
         </activity>
          <activity
             android:name="com.example.certifoto.ResultPicActivity"
